parser_v6/y.output
Terminals unused in grammar

    AND
    OR


State 10 conflicts: 1 shift/reduce
State 42 conflicts: 10 shift/reduce
State 77 conflicts: 4 shift/reduce


Grammar

    0 $accept: program $end

    1 program: headers main '(' ')' '{' body return '}'

    2 headers: headers headers

    3 $@1: %empty

    4 headers: INCLUDE $@1

    5 main: datatype ID

    6 datatype: INT
    7         | FLOAT
    8         | CHAR
    9         | VOID

   10 $@2: %empty

   11 body: FOR $@2 '(' statement ';' statement ';' statement ')' '{' body '}'

   12 $@3: %empty

   13 body: IF $@3 '(' condition ')' '{' body '}' else
   14     | statement ';'
   15     | body body

   16 $@4: %empty

   17 body: PRINTFF $@4 '(' STR ')' ';'

   18 $@5: %empty

   19 body: SCANFF $@5 '(' STR ',' '&' ID ')' ';'

   20 $@6: %empty

   21 else: ELSE $@6 '{' body '}'
   22     | %empty

   23 condition: value relop value
   24          | TRUE
   25          | FALSE
   26          | %empty

   27 $@7: %empty

   28 statement: datatype ID $@7 init
   29          | ID '=' expression
   30          | ID relop expression
   31          | ID UNARY
   32          | UNARY ID

   33 init: '=' value
   34     | %empty

   35 expression: expression arithmetic expression
   36           | value

   37 arithmetic: ADD
   38           | SUBTRACT
   39           | MULTIPLY
   40           | DIVIDE

   41 relop: LT
   42      | GT
   43      | LE
   44      | GE
   45      | EQ
   46      | NE

   47 value: NUMBER
   48      | ID

   49 $@8: %empty

   50 return: RETURN $@8 value ';'
   51       | %empty


Terminals, with rules where they appear

    $end (0) 0
    '&' (38) 19
    '(' (40) 1 11 13 17 19
    ')' (41) 1 11 13 17 19
    ',' (44) 19
    ';' (59) 11 14 17 19 50
    '=' (61) 29 33
    '{' (123) 1 11 13 21
    '}' (125) 1 11 13 21
    error (256)
    VOID (258) 9
    PRINTFF <nam> (259) 17
    SCANFF <nam> (260) 19
    INT <nam> (261) 6
    FLOAT <nam> (262) 7
    CHAR <nam> (263) 8
    FOR <nam> (264) 11
    IF <nam> (265) 13
    ELSE <nam> (266) 21
    TRUE <nam> (267) 24
    FALSE <nam> (268) 25
    NUMBER <nam> (269) 47
    ID <nam> (270) 5 19 28 29 30 31 32 48
    LE <nam> (271) 43
    GE <nam> (272) 44
    EQ <nam> (273) 45
    NE <nam> (274) 46
    GT <nam> (275) 42
    LT <nam> (276) 41
    AND <nam> (277)
    OR <nam> (278)
    STR <nam> (279) 17 19
    ADD <nam> (280) 37
    MULTIPLY <nam> (281) 39
    DIVIDE <nam> (282) 40
    SUBTRACT <nam> (283) 38
    UNARY <nam> (284) 31 32
    INCLUDE <nam> (285) 4
    RETURN <nam> (286) 50


Nonterminals, with rules where they appear

    $accept (40)
        on left: 0
    program <nam> (41)
        on left: 1
        on right: 0
    headers <nam> (42)
        on left: 2 4
        on right: 1 2
    $@1 (43)
        on left: 3
        on right: 4
    main <nam> (44)
        on left: 5
        on right: 1
    datatype <nam> (45)
        on left: 6 7 8 9
        on right: 5 28
    body <nam> (46)
        on left: 11 13 14 15 17 19
        on right: 1 11 13 15 21
    $@2 (47)
        on left: 10
        on right: 11
    $@3 (48)
        on left: 12
        on right: 13
    $@4 (49)
        on left: 16
        on right: 17
    $@5 (50)
        on left: 18
        on right: 19
    else <nam> (51)
        on left: 21 22
        on right: 13
    $@6 (52)
        on left: 20
        on right: 21
    condition <nam> (53)
        on left: 23 24 25 26
        on right: 13
    statement <nam> (54)
        on left: 28 29 30 31 32
        on right: 11 14
    $@7 (55)
        on left: 27
        on right: 28
    init <nam> (56)
        on left: 33 34
        on right: 28
    expression <nam> (57)
        on left: 35 36
        on right: 29 30 35
    arithmetic <nam> (58)
        on left: 37 38 39 40
        on right: 35
    relop <nam> (59)
        on left: 41 42 43 44 45 46
        on right: 23 30
    value <nam> (60)
        on left: 47 48
        on right: 23 33 36 50
    return <nam> (61)
        on left: 50 51
        on right: 1
    $@8 (62)
        on left: 49
        on right: 50


State 0

    0 $accept: . program $end

    INCLUDE  shift, and go to state 1

    program  go to state 2
    headers  go to state 3


State 1

    4 headers: INCLUDE . $@1

    $default  reduce using rule 3 ($@1)

    $@1  go to state 4


State 2

    0 $accept: program . $end

    $end  shift, and go to state 5


State 3

    1 program: headers . main '(' ')' '{' body return '}'
    2 headers: headers . headers

    VOID     shift, and go to state 6
    INT      shift, and go to state 7
    FLOAT    shift, and go to state 8
    CHAR     shift, and go to state 9
    INCLUDE  shift, and go to state 1

    headers   go to state 10
    main      go to state 11
    datatype  go to state 12


State 4

    4 headers: INCLUDE $@1 .

    $default  reduce using rule 4 (headers)


State 5

    0 $accept: program $end .

    $default  accept


State 6

    9 datatype: VOID .

    $default  reduce using rule 9 (datatype)


State 7

    6 datatype: INT .

    $default  reduce using rule 6 (datatype)


State 8

    7 datatype: FLOAT .

    $default  reduce using rule 7 (datatype)


State 9

    8 datatype: CHAR .

    $default  reduce using rule 8 (datatype)


State 10

    2 headers: headers . headers
    2        | headers headers .

    INCLUDE  shift, and go to state 1

    INCLUDE   [reduce using rule 2 (headers)]
    $default  reduce using rule 2 (headers)

    headers  go to state 10


State 11

    1 program: headers main . '(' ')' '{' body return '}'

    '('  shift, and go to state 13


State 12

    5 main: datatype . ID

    ID  shift, and go to state 14


State 13

    1 program: headers main '(' . ')' '{' body return '}'

    ')'  shift, and go to state 15


State 14

    5 main: datatype ID .

    $default  reduce using rule 5 (main)


State 15

    1 program: headers main '(' ')' . '{' body return '}'

    '{'  shift, and go to state 16


State 16

    1 program: headers main '(' ')' '{' . body return '}'

    VOID     shift, and go to state 6
    PRINTFF  shift, and go to state 17
    SCANFF   shift, and go to state 18
    INT      shift, and go to state 7
    FLOAT    shift, and go to state 8
    CHAR     shift, and go to state 9
    FOR      shift, and go to state 19
    IF       shift, and go to state 20
    ID       shift, and go to state 21
    UNARY    shift, and go to state 22

    datatype   go to state 23
    body       go to state 24
    statement  go to state 25


State 17

   17 body: PRINTFF . $@4 '(' STR ')' ';'

    $default  reduce using rule 16 ($@4)

    $@4  go to state 26


State 18

   19 body: SCANFF . $@5 '(' STR ',' '&' ID ')' ';'

    $default  reduce using rule 18 ($@5)

    $@5  go to state 27


State 19

   11 body: FOR . $@2 '(' statement ';' statement ';' statement ')' '{' body '}'

    $default  reduce using rule 10 ($@2)

    $@2  go to state 28


State 20

   13 body: IF . $@3 '(' condition ')' '{' body '}' else

    $default  reduce using rule 12 ($@3)

    $@3  go to state 29


State 21

   29 statement: ID . '=' expression
   30          | ID . relop expression
   31          | ID . UNARY

    LE     shift, and go to state 30
    GE     shift, and go to state 31
    EQ     shift, and go to state 32
    NE     shift, and go to state 33
    GT     shift, and go to state 34
    LT     shift, and go to state 35
    UNARY  shift, and go to state 36
    '='    shift, and go to state 37

    relop  go to state 38


State 22

   32 statement: UNARY . ID

    ID  shift, and go to state 39


State 23

   28 statement: datatype . ID $@7 init

    ID  shift, and go to state 40


State 24

    1 program: headers main '(' ')' '{' body . return '}'
   15 body: body . body

    VOID     shift, and go to state 6
    PRINTFF  shift, and go to state 17
    SCANFF   shift, and go to state 18
    INT      shift, and go to state 7
    FLOAT    shift, and go to state 8
    CHAR     shift, and go to state 9
    FOR      shift, and go to state 19
    IF       shift, and go to state 20
    ID       shift, and go to state 21
    UNARY    shift, and go to state 22
    RETURN   shift, and go to state 41

    $default  reduce using rule 51 (return)

    datatype   go to state 23
    body       go to state 42
    statement  go to state 25
    return     go to state 43


State 25

   14 body: statement . ';'

    ';'  shift, and go to state 44


State 26

   17 body: PRINTFF $@4 . '(' STR ')' ';'

    '('  shift, and go to state 45


State 27

   19 body: SCANFF $@5 . '(' STR ',' '&' ID ')' ';'

    '('  shift, and go to state 46


State 28

   11 body: FOR $@2 . '(' statement ';' statement ';' statement ')' '{' body '}'

    '('  shift, and go to state 47


State 29

   13 body: IF $@3 . '(' condition ')' '{' body '}' else

    '('  shift, and go to state 48


State 30

   43 relop: LE .

    $default  reduce using rule 43 (relop)


State 31

   44 relop: GE .

    $default  reduce using rule 44 (relop)


State 32

   45 relop: EQ .

    $default  reduce using rule 45 (relop)


State 33

   46 relop: NE .

    $default  reduce using rule 46 (relop)


State 34

   42 relop: GT .

    $default  reduce using rule 42 (relop)


State 35

   41 relop: LT .

    $default  reduce using rule 41 (relop)


State 36

   31 statement: ID UNARY .

    $default  reduce using rule 31 (statement)


State 37

   29 statement: ID '=' . expression

    NUMBER  shift, and go to state 49
    ID      shift, and go to state 50

    expression  go to state 51
    value       go to state 52


State 38

   30 statement: ID relop . expression

    NUMBER  shift, and go to state 49
    ID      shift, and go to state 50

    expression  go to state 53
    value       go to state 52


State 39

   32 statement: UNARY ID .

    $default  reduce using rule 32 (statement)


State 40

   28 statement: datatype ID . $@7 init

    $default  reduce using rule 27 ($@7)

    $@7  go to state 54


State 41

   50 return: RETURN . $@8 value ';'

    $default  reduce using rule 49 ($@8)

    $@8  go to state 55


State 42

   15 body: body . body
   15     | body body .

    VOID     shift, and go to state 6
    PRINTFF  shift, and go to state 17
    SCANFF   shift, and go to state 18
    INT      shift, and go to state 7
    FLOAT    shift, and go to state 8
    CHAR     shift, and go to state 9
    FOR      shift, and go to state 19
    IF       shift, and go to state 20
    ID       shift, and go to state 21
    UNARY    shift, and go to state 22

    VOID      [reduce using rule 15 (body)]
    PRINTFF   [reduce using rule 15 (body)]
    SCANFF    [reduce using rule 15 (body)]
    INT       [reduce using rule 15 (body)]
    FLOAT     [reduce using rule 15 (body)]
    CHAR      [reduce using rule 15 (body)]
    FOR       [reduce using rule 15 (body)]
    IF        [reduce using rule 15 (body)]
    ID        [reduce using rule 15 (body)]
    UNARY     [reduce using rule 15 (body)]
    $default  reduce using rule 15 (body)

    datatype   go to state 23
    body       go to state 42
    statement  go to state 25


State 43

    1 program: headers main '(' ')' '{' body return . '}'

    '}'  shift, and go to state 56


State 44

   14 body: statement ';' .

    $default  reduce using rule 14 (body)


State 45

   17 body: PRINTFF $@4 '(' . STR ')' ';'

    STR  shift, and go to state 57


State 46

   19 body: SCANFF $@5 '(' . STR ',' '&' ID ')' ';'

    STR  shift, and go to state 58


State 47

   11 body: FOR $@2 '(' . statement ';' statement ';' statement ')' '{' body '}'

    VOID   shift, and go to state 6
    INT    shift, and go to state 7
    FLOAT  shift, and go to state 8
    CHAR   shift, and go to state 9
    ID     shift, and go to state 21
    UNARY  shift, and go to state 22

    datatype   go to state 23
    statement  go to state 59


State 48

   13 body: IF $@3 '(' . condition ')' '{' body '}' else

    TRUE    shift, and go to state 60
    FALSE   shift, and go to state 61
    NUMBER  shift, and go to state 49
    ID      shift, and go to state 50

    $default  reduce using rule 26 (condition)

    condition  go to state 62
    value      go to state 63


State 49

   47 value: NUMBER .

    $default  reduce using rule 47 (value)


State 50

   48 value: ID .

    $default  reduce using rule 48 (value)


State 51

   29 statement: ID '=' expression .
   35 expression: expression . arithmetic expression

    ADD       shift, and go to state 64
    MULTIPLY  shift, and go to state 65
    DIVIDE    shift, and go to state 66
    SUBTRACT  shift, and go to state 67

    $default  reduce using rule 29 (statement)

    arithmetic  go to state 68


State 52

   36 expression: value .

    $default  reduce using rule 36 (expression)


State 53

   30 statement: ID relop expression .
   35 expression: expression . arithmetic expression

    ADD       shift, and go to state 64
    MULTIPLY  shift, and go to state 65
    DIVIDE    shift, and go to state 66
    SUBTRACT  shift, and go to state 67

    $default  reduce using rule 30 (statement)

    arithmetic  go to state 68


State 54

   28 statement: datatype ID $@7 . init

    '='  shift, and go to state 69

    $default  reduce using rule 34 (init)

    init  go to state 70


State 55

   50 return: RETURN $@8 . value ';'

    NUMBER  shift, and go to state 49
    ID      shift, and go to state 50

    value  go to state 71


State 56

    1 program: headers main '(' ')' '{' body return '}' .

    $default  reduce using rule 1 (program)


State 57

   17 body: PRINTFF $@4 '(' STR . ')' ';'

    ')'  shift, and go to state 72


State 58

   19 body: SCANFF $@5 '(' STR . ',' '&' ID ')' ';'

    ','  shift, and go to state 73


State 59

   11 body: FOR $@2 '(' statement . ';' statement ';' statement ')' '{' body '}'

    ';'  shift, and go to state 74


State 60

   24 condition: TRUE .

    $default  reduce using rule 24 (condition)


State 61

   25 condition: FALSE .

    $default  reduce using rule 25 (condition)


State 62

   13 body: IF $@3 '(' condition . ')' '{' body '}' else

    ')'  shift, and go to state 75


State 63

   23 condition: value . relop value

    LE  shift, and go to state 30
    GE  shift, and go to state 31
    EQ  shift, and go to state 32
    NE  shift, and go to state 33
    GT  shift, and go to state 34
    LT  shift, and go to state 35

    relop  go to state 76


State 64

   37 arithmetic: ADD .

    $default  reduce using rule 37 (arithmetic)


State 65

   39 arithmetic: MULTIPLY .

    $default  reduce using rule 39 (arithmetic)


State 66

   40 arithmetic: DIVIDE .

    $default  reduce using rule 40 (arithmetic)


State 67

   38 arithmetic: SUBTRACT .

    $default  reduce using rule 38 (arithmetic)


State 68

   35 expression: expression arithmetic . expression

    NUMBER  shift, and go to state 49
    ID      shift, and go to state 50

    expression  go to state 77
    value       go to state 52


State 69

   33 init: '=' . value

    NUMBER  shift, and go to state 49
    ID      shift, and go to state 50

    value  go to state 78


State 70

   28 statement: datatype ID $@7 init .

    $default  reduce using rule 28 (statement)


State 71

   50 return: RETURN $@8 value . ';'

    ';'  shift, and go to state 79


State 72

   17 body: PRINTFF $@4 '(' STR ')' . ';'

    ';'  shift, and go to state 80


State 73

   19 body: SCANFF $@5 '(' STR ',' . '&' ID ')' ';'

    '&'  shift, and go to state 81


State 74

   11 body: FOR $@2 '(' statement ';' . statement ';' statement ')' '{' body '}'

    VOID   shift, and go to state 6
    INT    shift, and go to state 7
    FLOAT  shift, and go to state 8
    CHAR   shift, and go to state 9
    ID     shift, and go to state 21
    UNARY  shift, and go to state 22

    datatype   go to state 23
    statement  go to state 82


State 75

   13 body: IF $@3 '(' condition ')' . '{' body '}' else

    '{'  shift, and go to state 83


State 76

   23 condition: value relop . value

    NUMBER  shift, and go to state 49
    ID      shift, and go to state 50

    value  go to state 84


State 77

   35 expression: expression . arithmetic expression
   35           | expression arithmetic expression .

    ADD       shift, and go to state 64
    MULTIPLY  shift, and go to state 65
    DIVIDE    shift, and go to state 66
    SUBTRACT  shift, and go to state 67

    ADD       [reduce using rule 35 (expression)]
    MULTIPLY  [reduce using rule 35 (expression)]
    DIVIDE    [reduce using rule 35 (expression)]
    SUBTRACT  [reduce using rule 35 (expression)]
    $default  reduce using rule 35 (expression)

    arithmetic  go to state 68


State 78

   33 init: '=' value .

    $default  reduce using rule 33 (init)


State 79

   50 return: RETURN $@8 value ';' .

    $default  reduce using rule 50 (return)


State 80

   17 body: PRINTFF $@4 '(' STR ')' ';' .

    $default  reduce using rule 17 (body)


State 81

   19 body: SCANFF $@5 '(' STR ',' '&' . ID ')' ';'

    ID  shift, and go to state 85


State 82

   11 body: FOR $@2 '(' statement ';' statement . ';' statement ')' '{' body '}'

    ';'  shift, and go to state 86


State 83

   13 body: IF $@3 '(' condition ')' '{' . body '}' else

    VOID     shift, and go to state 6
    PRINTFF  shift, and go to state 17
    SCANFF   shift, and go to state 18
    INT      shift, and go to state 7
    FLOAT    shift, and go to state 8
    CHAR     shift, and go to state 9
    FOR      shift, and go to state 19
    IF       shift, and go to state 20
    ID       shift, and go to state 21
    UNARY    shift, and go to state 22

    datatype   go to state 23
    body       go to state 87
    statement  go to state 25


State 84

   23 condition: value relop value .

    $default  reduce using rule 23 (condition)


State 85

   19 body: SCANFF $@5 '(' STR ',' '&' ID . ')' ';'

    ')'  shift, and go to state 88


State 86

   11 body: FOR $@2 '(' statement ';' statement ';' . statement ')' '{' body '}'

    VOID   shift, and go to state 6
    INT    shift, and go to state 7
    FLOAT  shift, and go to state 8
    CHAR   shift, and go to state 9
    ID     shift, and go to state 21
    UNARY  shift, and go to state 22

    datatype   go to state 23
    statement  go to state 89


State 87

   13 body: IF $@3 '(' condition ')' '{' body . '}' else
   15     | body . body

    VOID     shift, and go to state 6
    PRINTFF  shift, and go to state 17
    SCANFF   shift, and go to state 18
    INT      shift, and go to state 7
    FLOAT    shift, and go to state 8
    CHAR     shift, and go to state 9
    FOR      shift, and go to state 19
    IF       shift, and go to state 20
    ID       shift, and go to state 21
    UNARY    shift, and go to state 22
    '}'      shift, and go to state 90

    datatype   go to state 23
    body       go to state 42
    statement  go to state 25


State 88

   19 body: SCANFF $@5 '(' STR ',' '&' ID ')' . ';'

    ';'  shift, and go to state 91


State 89

   11 body: FOR $@2 '(' statement ';' statement ';' statement . ')' '{' body '}'

    ')'  shift, and go to state 92


State 90

   13 body: IF $@3 '(' condition ')' '{' body '}' . else

    ELSE  shift, and go to state 93

    $default  reduce using rule 22 (else)

    else  go to state 94


State 91

   19 body: SCANFF $@5 '(' STR ',' '&' ID ')' ';' .

    $default  reduce using rule 19 (body)


State 92

   11 body: FOR $@2 '(' statement ';' statement ';' statement ')' . '{' body '}'

    '{'  shift, and go to state 95


State 93

   21 else: ELSE . $@6 '{' body '}'

    $default  reduce using rule 20 ($@6)

    $@6  go to state 96


State 94

   13 body: IF $@3 '(' condition ')' '{' body '}' else .

    $default  reduce using rule 13 (body)


State 95

   11 body: FOR $@2 '(' statement ';' statement ';' statement ')' '{' . body '}'

    VOID     shift, and go to state 6
    PRINTFF  shift, and go to state 17
    SCANFF   shift, and go to state 18
    INT      shift, and go to state 7
    FLOAT    shift, and go to state 8
    CHAR     shift, and go to state 9
    FOR      shift, and go to state 19
    IF       shift, and go to state 20
    ID       shift, and go to state 21
    UNARY    shift, and go to state 22

    datatype   go to state 23
    body       go to state 97
    statement  go to state 25


State 96

   21 else: ELSE $@6 . '{' body '}'

    '{'  shift, and go to state 98


State 97

   11 body: FOR $@2 '(' statement ';' statement ';' statement ')' '{' body . '}'
   15     | body . body

    VOID     shift, and go to state 6
    PRINTFF  shift, and go to state 17
    SCANFF   shift, and go to state 18
    INT      shift, and go to state 7
    FLOAT    shift, and go to state 8
    CHAR     shift, and go to state 9
    FOR      shift, and go to state 19
    IF       shift, and go to state 20
    ID       shift, and go to state 21
    UNARY    shift, and go to state 22
    '}'      shift, and go to state 99

    datatype   go to state 23
    body       go to state 42
    statement  go to state 25


State 98

   21 else: ELSE $@6 '{' . body '}'

    VOID     shift, and go to state 6
    PRINTFF  shift, and go to state 17
    SCANFF   shift, and go to state 18
    INT      shift, and go to state 7
    FLOAT    shift, and go to state 8
    CHAR     shift, and go to state 9
    FOR      shift, and go to state 19
    IF       shift, and go to state 20
    ID       shift, and go to state 21
    UNARY    shift, and go to state 22

    datatype   go to state 23
    body       go to state 100
    statement  go to state 25


State 99

   11 body: FOR $@2 '(' statement ';' statement ';' statement ')' '{' body '}' .

    $default  reduce using rule 11 (body)


State 100

   15 body: body . body
   21 else: ELSE $@6 '{' body . '}'

    VOID     shift, and go to state 6
    PRINTFF  shift, and go to state 17
    SCANFF   shift, and go to state 18
    INT      shift, and go to state 7
    FLOAT    shift, and go to state 8
    CHAR     shift, and go to state 9
    FOR      shift, and go to state 19
    IF       shift, and go to state 20
    ID       shift, and go to state 21
    UNARY    shift, and go to state 22
    '}'      shift, and go to state 101

    datatype   go to state 23
    body       go to state 42
    statement  go to state 25


State 101

   21 else: ELSE $@6 '{' body '}' .

    $default  reduce using rule 21 (else)
